Add emacs backup and cmake files

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,24 @@
 *.out
 *.app
 bin
+build
+
+# Emacs related
+*.~undo-tree
+
+# Backup files
+*~
+.#.*
+
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
