--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.23)
 
-project(trading)
+project(trader VERSION 0.1.0)
 
-target_include_directories(trader PRIVATE "includes")
+# Specify C++ Standard
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_subdirectory(src)
