--- a/src/version/CMakeLists.txt
+++ b/src/version/CMakeLists.txt
@@ -1,3 +1,3 @@
 # configure a header file to pass some of the CMake settings
 # to the source code
-configure_file(version.h.in version.h)
+configure_file(version.h.in version.hpp)
