--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.11"]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ibapi pandas pylint requests requests-cache sqlalchemy yfinance PyYAML
+        pip install ibapi pandas pylint requests requests-cache sqlalchemy yfinance PyYAML pygit2
     - name: Analysing the code with pylint
       run: |
-        pylint -d C0302 $(git ls-files '*.py')
+        pylint $(git ls-files '*.py')
