--- a/src/version/version.h.in
+++ b/src/version/version.h.in
@@ -1,3 +1,6 @@
 #define trader_VERSION_MAJOR @trader_VERSION_MAJOR@
 #define trader_VERSION_MINOR @trader_VERSION_MINOR@
 #define trader_VERSION_PATCH @trader_VERSION_PATCH@
+
+#define VALUE(string) #string
+#define TO_LITERAL(string) VALUE(string)
