--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ibapi pandas pylint requests requests-cache sqlalchemy yfinance PyYAML pygit2
+        pip install ibapi pandas pylint requests requests-cache sqlalchemy yfinance PyYAML pygit2 pymysql
     - name: Analysing the code with pylint
       run: |
         pylint -d W0511 $(git ls-files '*.py')
